[tool.poetry]
name = "shaniraq-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.12"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^1.4.46"
pyjwt = "^2.6.0"
python-multipart = "^0.0.5"
pydantic = "^1.10.5"
jinja2 = "^3.1.5"
alembic = "^1.7.0"
attrs = "^25.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
